[tool.poetry]
name = "python-e2e"
version = "0.1.0"
description = ""
authors = ['jean-christophe lavoie']

[tool.poetry.dependencies]
python = "^3.9.7"
requests = "^2.26.0"
redis = "^4.0.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"